--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
             cmake_options: -DENABLE_PRECOMPILED_HEADERS=OFF
           - cmake_options: -DBUILD_TESTING=ON -DENABLE_PRECOMPILED_HEADERS=OFF
             enable_testing: true
-          - cmake_options: -DNO_FONT_INTERFACE_DEFAULT=ON
+          - cmake_options: -DNO_FONT_INTERFACE_DEFAULT=ON -DENABLE_LOTTIE_PLUGIN=ON
           - cmake_options: -DDISABLE_RTTI_AND_EXCEPTIONS=ON
           - cmake_options: -DNO_THIRDPARTY_CONTAINERS=ON
 
