Fix Lua include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -572,10 +572,10 @@ endif()
 if(BUILD_LUA_BINDINGS)
 	if(NOT BUILD_FRAMEWORK)
 		target_link_libraries(RmlLua RmlCore ${LUA_BINDINGS_LINK_LIBS})
-		target_include_directories(RmlLua PRIVATE ${LUA_BINDINGS_INCLUDE_DIRS})
+		target_include_directories(RmlLua PUBLIC ${LUA_BINDINGS_INCLUDE_DIRS})
 	else()
 		target_link_libraries(RmlUi ${LUA_BINDINGS_LINK_LIBS})
-		target_include_directories(RmlUi PRIVATE ${LUA_BINDINGS_INCLUDE_DIRS})
+		target_include_directories(RmlUi PUBLIC ${LUA_BINDINGS_INCLUDE_DIRS})
 	endif()
 endif()
 
