Commented out FndLibrary in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -322,9 +322,9 @@ include(FileList)
 
 # FreeType
 if(NOT NO_FONT_INTERFACE_DEFAULT)
-	find_package(Freetype REQUIRED)
-	list(APPEND CORE_LINK_LIBS ${FREETYPE_LIBRARIES})
-	list(APPEND CORE_INCLUDE_DIRS ${FREETYPE_INCLUDE_DIRS})
+	#find_package(Freetype REQUIRED)
+	#list(APPEND CORE_LINK_LIBS ${FREETYPE_LIBRARIES})
+	#list(APPEND CORE_INCLUDE_DIRS ${FREETYPE_INCLUDE_DIRS})
 endif()
 
 # Lua
