Warn when using FreeType 2.11.0 with the MSVC compiler, as this version introduced an issue leading to crashes.
See FreeType issue here: https://gitlab.freedesktop.org/freetype/freetype/-/issues/1092

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -323,6 +323,11 @@ include(FileList)
 # FreeType
 if(NOT NO_FONT_INTERFACE_DEFAULT)
 	find_package(Freetype REQUIRED)
+	
+	if(MSVC AND FREETYPE_VERSION_STRING STREQUAL "2.11.0")
+		message(WARNING "You are using FreeType version 2.11.0 which introduced an issue that causes a crash on startup on some of the samples. Please avoid this version specifically.")
+	endif()
+	
 	list(APPEND CORE_LINK_LIBS ${FREETYPE_LIBRARIES})
 	list(APPEND CORE_INCLUDE_DIRS ${FREETYPE_INCLUDE_DIRS})
 endif()
